--- a/package.json
+++ b/package.json
@@ -8,8 +8,32 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "anywhere": "^1.5.0",
+    "axios": "^0.21.0",
+    "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "crypto-js": "^4.0.0",
+    "date-fns": "^2.16.1",
+    "downloadjs": "^1.4.7",
+    "echarts": "^5.0.1",
+    "element-ui": "^2.14.1",
+    "js-cookie": "^2.2.1",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "node-sass": "^4.13.0",
+    "postcss-plugin-px2rem": "^0.8.1",
+    "qrcodejs2": "0.0.2",
+    "sass-loader": "^7.3.1",
+    "screenfull": "^5.1.0",
+    "three": "^0.125.2",
+    "tinymce": "^5.6.2",
+    "uuid": "^8.3.2",
+    "vant": "^2.12.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.9",
+    "vuex": "^3.6.2",
+    "vuex-persist": "^3.1.3",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -18,6 +42,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass-resources-loader": "^2.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
